the gigantic `GlobalClasses` is no longer required